# engine_core

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  compile-shaders-linux.sh  compile-shaders-win-glsl.bat  configure-ninja.sh  imgui.ini  run.sh
sdl-imgui/: imgui_impl_sdl.cpp
src/: application.cpp  application.h  main.cpp  pch.h
src/render/: opengl_context.cpp  opengl_context.h  render_base.h  ui_context.cpp
src/ui/: property_panel.cpp  property_panel.h  scene_view.cpp  scene_view.h
src/ui/ax/: Builders.cpp  Drawing.cpp
src/utils/: imgui_widgets.h
src/window/: jgl_window.cpp  jgl_window.h
